package com.example.cleanarchitecturenoteapp.core.utill

object TestTags {
    const val ORDER_SECTION = "order_section"
    const val TITLE_SECTION = "title_section"
    const val CONTENT_SECTION = "content_section"
    const val NOTE_ITEM = "note_item"
}